# open-source-resume-screening

./: .dockerignore  .env.example  .gitignore  DEMO_FEEDBACK_IMPROVEMENTS.md  DOCKER_GUIDE.md  Dockerfile  README.md  TROUBLESHOOTING_SCORING.md  WORKFLOW_ARCHITECTURE.md  docker-compose.yml  llm_test_output.txt  output.txt  pyproject.toml  requirements.txt  test_llm.py
screening_debug/: 4a2d895eac27460590f88acdf7e63b2d_20260420_213702.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_213859.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_214556.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_221455.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_221904.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_223357.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_223831.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_224400.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_225452.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_230443.txt  4a2d895eac27460590f88acdf7e63b2d_20260420_230810.txt  75bb073d87b543a0acbaa883bc330564_20260420_213428.txt  75bb073d87b543a0acbaa883bc330564_20260420_214908.txt  75bb073d87b543a0acbaa883bc330564_20260420_215921.txt  75bb073d87b543a0acbaa883bc330564_20260420_221018.txt  992aae60a7944c988061ddc88e32057b_20260420_215611.txt  992aae60a7944c988061ddc88e32057b_20260420_231548.txt
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  data_fetching_agent.py  explanation_agent.py  fairness_agent.py  orchestrator.py  ranking_agent.py  rubric_generation_agent.py  screening_agent.py  validation_agent.py
src/api/: app.py
src/config/: logging_config.py  settings.py
src/metrics/: __init__.py  fairness.py  tracking.py
src/models/: __init__.py  schemas.py  scoring.py
src/scripts/: demo_rubric.py
src/utils/: __init__.py  (+2 more)
tests/: conftest.py
(+37 files in other folders)
